unpackaged/main/default/objects/Forecast_Snapshot__c/fields/Attached_Services_Status__c.field-meta.xml
<CustomField>
    <fullName>Attached_Services_Status__c</fullName>
    <description>Current status of the attached professional services deal at the time of snapshot.
None, Open, Lost, Won</description>
    <inlineHelpText>Current status of the attached professional services deal at the time of snapshot.
None, Open, Lost, Won</inlineHelpText>
    <label>Attached Services Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>