unpackaged/main/default/objects/Forecast_Snapshot__c/fields/AWS_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>AWS_Account_Number__c</fullName>
    <description>Returns the related Opportunity&#39;s AWS Account Number.</description>
    <formula>Opportunity__r.AWS_Account_Number__c</formula>
    <label>AWS Account Number</label>
    <type>Text</type>
</CustomField>