unpackaged/main/default/objects/Forecast_Snapshot__c/fields/Booking_Date__c.field-meta.xml
<CustomField>
    <fullName>Booking_Date__c</fullName>
    <label>Booking Date</label>
    <type>Date</type>
</CustomField>