unpackaged/main/default/objects/Forecast_Snapshot__c/fields/Churn_Contraction_Best_Case__c.field-meta.xml
<CustomField>
    <fullName>Churn_Contraction_Best_Case__c</fullName>
    <label>Churn/Contraction (Best Case)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>