unpackaged/main/default/objects/Forecast_Snapshot__c/fields/Expected_Logos__c.field-meta.xml
<CustomField>
    <fullName>Expected_Logos__c</fullName>
    <label>Expected Logos</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>