unpackaged/main/default/objects/Forecast_Snapshot__c/fields/Forecast_Call__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Call__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Forecast Call</label>
    <referenceTo>Forecast_Call__c</referenceTo>
    <relationshipLabel>Forecast Snapshots</relationshipLabel>
    <relationshipName>Forecast_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>