unpackaged/main/default/objects/Forecast_Snapshot__c/fields/Forecast_New_AR__c.field-meta.xml
<CustomField>
    <fullName>Forecast_New_AR__c</fullName>
    <label>Forecast New AR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>