unpackaged/main/default/objects/Forecast_Snapshot__c/fields/Has_Attached_Services__c.field-meta.xml
<CustomField>
    <fullName>Has_Attached_Services__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the Opportunity has an attached professional services deal at the time of snapshot.</description>
    <inlineHelpText>Indicates if the Opportunity has an attached professional services deal at the time of snapshot.</inlineHelpText>
    <label>Has Attached Services?</label>
    <type>Checkbox</type>
</CustomField>