unpackaged/main/default/objects/Forecast_Snapshot__c/fields/Missing_Services_Reason__c.field-meta.xml
<CustomField>
    <fullName>Missing_Services_Reason__c</fullName>
    <description>Reason if the deal does not have an attached professional services deal at the time of snapshot.
- Upgrading from deployed SSOP
- Lack of budget
- Strong internal technical capability
- Other</description>
    <inlineHelpText>Reason if the deal does not have an attached professional services deal at the time of snapshot.
Reason if the deal does not have an attached professional services deal at the time of snapshot.
- Upgrading from deployed SSOP
- Lack of budget
- Strong internal technical capability
- Other</inlineHelpText>
    <label>Missing Services Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>