unpackaged/main/default/objects/Forecast_Snapshot__c/fields/New_AR_Change__c.field-meta.xml
<CustomField>
    <fullName>New_AR_Change__c</fullName>
    <description>Week over week New AR difference from the previous week.</description>
    <formula>New_Annualized_Revenue__c - Previous_Snapshot__r.New_Annualized_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New AR Change</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>