unpackaged/main/default/objects/Forecast_Snapshot__c/fields/Previous_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Previous_Snapshot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Snapshot</label>
    <referenceTo>Forecast_Snapshot__c</referenceTo>
    <relationshipLabel>Forecast Snapshots</relationshipLabel>
    <relationshipName>Forecast_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>