unpackaged/main/default/objects/Forecast_Snapshot__c/fields/Renewal_Baseline_ARR__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Baseline_ARR__c</fullName>
    <label>Renewal Baseline ARR</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>