unpackaged/main/default/objects/Forecast_Snapshot__c/fields/Renewal_Target_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Target_Close_Date__c</fullName>
    <label>Renewal Target Close Date</label>
    <type>Date</type>
</CustomField>