unpackaged/main/default/objects/Forecast_Snapshot__c/fields/Snapshot_Removed__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Removed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked true if a rep edits their forecast in the given period.</description>
    <inlineHelpText>Checked true if a rep edits their forecast in the given period.</inlineHelpText>
    <label>Snapshot Removed?</label>
    <type>Checkbox</type>
</CustomField>