unpackaged/main/default/objects/Forecast_Snapshot__c/fields/Snapshot_Week_Start__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Week_Start__c</fullName>
    <formula>Snapshot_Date__c - CASE(MOD(WEEKDAY(Snapshot_Date__c) - 1, 7),
    0, 0,
    1, 1,
    2, 2,
    3, 3,
    4, 4,
    5, 5,
    6, 6,
    NULL
)</formula>
    <label>Snapshot Week (Start)</label>
    <type>Date</type>
</CustomField>