unpackaged/main/default/objects/Forecast_Snapshot__c/fields/Technical_Evaluation_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Technical_Evaluation_Forecast__c</fullName>
    <description>Current Technical Evaluation Forecast value.</description>
    <inlineHelpText>Current Technical Evaluation Forecast value.</inlineHelpText>
    <label>Technical Evaluation Forecast</label>
    <length>255</length>
    <type>Text</type>
</CustomField>