unpackaged/main/default/objects/Forecast_Snapshot__c/fields/Technical_Evaluation_Forecast_Details__c.field-meta.xml
<CustomField>
    <fullName>Technical_Evaluation_Forecast_Details__c</fullName>
    <description>Current Technical Evaluation Forecast Details.</description>
    <inlineHelpText>Current Technical Evaluation Forecast Details.</inlineHelpText>
    <label>Technical Evaluation Forecast Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>