unpackaged/main/default/objects/Forecast_Snapshot__c/fields/Total_Logos__c.field-meta.xml
<CustomField>
    <fullName>Total_Logos__c</fullName>
    <label>Total Logos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>