unpackaged/main/default/objects/Forecast_Snapshot__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Owner_Role__c</columns>
    <columns>Snapshot_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>